// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Monomer Group should render correct with title prop 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-1ecllxh"
      >
        <span>
          Mock title
        </span>
        <div
          class="css-19yk7oj"
        />
      </div>
      <div
        class="css-cfahjx"
      >
        <div
          class="css-m1s2pe"
        >
          R
        </div>
        <div
          class="css-m1s2pe"
        >
          m
        </div>
        <div
          class="css-m1s2pe"
        >
          d
        </div>
        <div
          class="css-m1s2pe"
        >
          ar
        </div>
        <div
          class="css-m1s2pe"
        >
          Ld
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-1ecllxh"
    >
      <span>
        Mock title
      </span>
      <div
        class="css-19yk7oj"
      />
    </div>
    <div
      class="css-cfahjx"
    >
      <div
        class="css-m1s2pe"
      >
        R
      </div>
      <div
        class="css-m1s2pe"
      >
        m
      </div>
      <div
        class="css-m1s2pe"
      >
        d
      </div>
      <div
        class="css-m1s2pe"
      >
        ar
      </div>
      <div
        class="css-m1s2pe"
      >
        Ld
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Monomer Group should render correct without title prop 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-cfahjx"
      >
        <div
          class="css-m1s2pe"
        >
          R
        </div>
        <div
          class="css-m1s2pe"
        >
          m
        </div>
        <div
          class="css-m1s2pe"
        >
          d
        </div>
        <div
          class="css-m1s2pe"
        >
          ar
        </div>
        <div
          class="css-m1s2pe"
        >
          Ld
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-cfahjx"
    >
      <div
        class="css-m1s2pe"
      >
        R
      </div>
      <div
        class="css-m1s2pe"
      >
        m
      </div>
      <div
        class="css-m1s2pe"
      >
        d
      </div>
      <div
        class="css-m1s2pe"
      >
        ar
      </div>
      <div
        class="css-m1s2pe"
      >
        Ld
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
